--- a/templates/A_custom.xml
+++ b/templates/A_custom.xml
@@ -37,4 +37,9 @@
       <option name="XML" value="false" />
     </context>
   </template>
+  <template name="if" value="if($END$){&#10;}" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
