--- a/templates/A_custom.xml
+++ b/templates/A_custom.xml
@@ -37,7 +37,7 @@
       <option name="XML" value="false" />
     </context>
   </template>
-  <template name="if" value="if($END$){&#10;}" toReformat="false" toShortenFQNames="true">
+  <template name="if" value="if($END$){&#10;}" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
