--- a/templates/A_custom.xml
+++ b/templates/A_custom.xml
@@ -53,4 +53,10 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
+  <template name="newTherad01" value="new Thread(new Runnable() {&#10;        @Override&#10;        public void run() {&#10;            $END$&#10;        }&#10;    }, $VAR1$).start();" toReformat="false" toShortenFQNames="true">
+    <variable name="VAR1" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
