--- a/templates/A_custom.xml
+++ b/templates/A_custom.xml
@@ -53,8 +53,13 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="newTherad01" value="new Thread(new Runnable() {&#10;        @Override&#10;        public void run() {&#10;            $END$&#10;        }&#10;    }, $VAR1$).start();" toReformat="false" toShortenFQNames="true">
+  <template name="newThread01" value="new Thread(new Runnable() {&#10;        @Override&#10;        public void run() {&#10;            $END$&#10;        }&#10;    }, $VAR1$).start();" toReformat="false" toShortenFQNames="true">
     <variable name="VAR1" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
+  <template name="forthread_10" value="for (int i = 0; i &lt; 10; i++) {&#10;     new Thread(() -&gt; { &#10;         $END$&#10;     },String.valueOf(i)).start();&#10;}" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
