--- a/templates/A_Nodes.xml
+++ b/templates/A_Nodes.xml
@@ -1,5 +1,5 @@
 <templateSet group="A~Nodes">
-  <template name="~~~~" value="~~~" toReformat="false" toShortenFQNames="true">
+  <template name="~~~~" value="~~~" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
