--- a/templates/A_JUC.xml
+++ b/templates/A_JUC.xml
@@ -1,5 +1,5 @@
 <templateSet group="A~JUC">
-  <template name="trysleep" value="try {&#10;    TimeUnit.SECONDS.sleep($END$);&#10;} catch (InterruptedException e) {&#10;    e.printStackTrace();&#10;}" description="(TimeUnit)" toReformat="false" toShortenFQNames="true">
+  <template name="trysleep" value="try { TimeUnit.SECONDS.sleep($END$); } catch (InterruptedException e) { e.printStackTrace(); }" description="(TimeUnit)" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
